argocd/media-server/calibre/bookorbit/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookorbit-http-route
  namespace: bookorbit
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: BookOrbit
    gethomepage.dev/icon: bookorbit
    gethomepage.dev/description: Self-hosted library management and reading platform.
    gethomepage.dev/pod-selector: app=bookorbit
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - bookorbit.yanello.net
  rules:
    - backendRefs:
        - name: bookorbit
          namespace: bookorbit
          port: 3000
